--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 17:20:35
-# Total rules: 5127
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 17:30:36
+# Total rules: 5097
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -17,7 +17,6 @@
 .2052.flash2-http.qq.com
 .27051a00.b-cdn.net
 .2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
-.2mdn.net
 .2xbits.blogspot.com
 .2xbits.eu.org
 .30032c91.b-cdn.net
@@ -160,7 +159,6 @@
 .adashx.m.taobao.com
 .adashx.ut.alibaba.com
 .adashx.ut.amap.com
-.adashx.ut.ele.me
 .adashx.ut.taobao.com
 .adashx.ut.uc.cn
 .adashx.ut.youku.com
@@ -199,15 +197,12 @@
 .adinf.cp11.ott.cibntv.net
 .adj.st
 .adjust.com
-.adjust.net.in
-.adjust.world
 .adkwai.com
 .adm.baidu.com
 .adm.leju.sina.com.cn
 .adm.shinobi.jp
 .admarket.21cn.com
 .admarvel.s3.amazonaws.com
-.admob.xiaomi.com
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
 .adnet.qq.com
@@ -223,7 +218,6 @@
 .adpublisher.s3.amazonaws.com
 .adrdir.qq.com
 .adreq.vivo.com.cn
-.ads-api.duolingo.com
 .ads-api.tiktok.com
 .ads-api.twitter.com
 .ads-api.x.com
@@ -315,7 +309,6 @@
 .adsfs-sdkconfig.heytapimage.com
 .adsfs.heytapimage.com
 .adsgroup.qq.com
-.adsh.m.taobao.com
 .adshmct.qq.com
 .adshmmsg.qq.com
 .adshows.21cn.com
@@ -336,7 +329,6 @@
 .adstatic.b-cdn.net
 .adstatic.zhihu.com
 .adstest.weather.com
-.adstestview.qq.com
 .adstextview.qq.com
 .adstore-1252524079.file.myqcloud.com
 .adstore-index-1252524079.file.myqcloud.com
@@ -363,7 +355,6 @@
 .advertising-api-eu.amazon.com
 .advertising-api-fe.amazon.com
 .advertising-api.amazon.com
-.advertising.adobe.com
 .advertising.apple.com
 .advertising.com
 .advertising.microsoft.com
@@ -387,6 +378,7 @@
 .afd.baidu.com
 .afd.l.google.com
 .affiliate-script-pr.firebaseapp.com
+.affiliate.2mdn.net
 .affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
@@ -399,7 +391,6 @@
 .agility.cnn.com
 .agkn.com
 .agoodm.m.taobao.com
-.agoodm.wapa.taobao.com
 .ahoy-internal-ads-hv.b-cdn.net
 .ai.m.taobao.com
 .ai.taobao.com
@@ -443,6 +434,7 @@
 .analytics.126.net
 .analytics.163.com
 .analytics.21cn.com
+.analytics.adjust.net.in
 .analytics.algolia.com
 .analytics.archive.org
 .analytics.bigdata.samsung.com
@@ -479,7 +471,6 @@
 .analytics.unity3d.com
 .analytics.us.archive.org
 .analytics.us.tiktok.com
-.analytics.vpc.duolingo.com
 .analytics.ws.126.net
 .analytics.yahoo.com
 .analytics.yicai.com
@@ -533,7 +524,6 @@
 .api.sprig.com
 .api.stacksocial.com
 .api.uca.cloud.unity3d.com
-.api.wapa.taobao.com
 .api.waptest.taobao.com
 .api.youqian.baidu.com
 .api5-normal-quic-lf.ixigua.com
@@ -543,6 +533,8 @@
 .app-analytics-services.com
 .app-measurement.com
 .app-monitor.ele.me
+.app.adjust.net.in
+.app.adjust.world
 .app.bugsnag.com
 .app.chat.xiaomi.net
 .app.pendo.io
@@ -713,7 +705,6 @@
 .buluo.qq.com
 .business-api.tiktok.com
 .buy-cheap-phentermine.blogspot.com
-.byteadverts.com
 .bzclk.baidu.com
 .c-5uwzmx78pmca09x24aiux2euavx2ekwu.g00.msn.com
 .c-adash.m.taobao.com
@@ -799,6 +790,7 @@
 .cdn.ark.qq.com
 .cdn.avantisvideo.com
 .cdn.decibelinsight.net
+.cdn.onesignal.com
 .cdn.tanx.com
 .cdn.ynuf.aliapp.org
 .cdnweb3.pages.dev
@@ -830,7 +822,6 @@
 .classify-client.services.mozilla.com
 .clc.stackoverflow.com
 .cleaner.baidu.com
-.click.ali213.net
 .click.alimama.com
 .click.aliyun.com
 .click.bes.baidu.com
@@ -2308,7 +2299,6 @@
 .data.test3.test.ajo.adobe.com
 .data.tsbuat.test.ajo.adobe.com
 .data.ultimate-success-emea.test.ajo.adobe.com
-.data.vod.itc.cn
 .data.wunderman-email.cjm.adobe.com
 .datadoghq-browser-agent.com
 .dataflow.biliapi.com
@@ -2505,7 +2495,6 @@
 .dmtracking2.alibaba.com
 .dmtw0i4zln92b.cloudfront.net
 .dmz3nd5oywtsw.cloudfront.net
-.dn-growing.qbox.me
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
 .dn6rwwtxa647p.cloudfront.net
@@ -2835,7 +2824,6 @@
 .fef258ef.b-cdn.net
 .fengkongcloud.com
 .fexclick.baidu.com
-.ff.win.taobao.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .ffe390afd658c19dcbf707e0597b846d.de
 .file.daihuo.qq.com
@@ -2912,6 +2900,7 @@
 .gb.corp.163.com
 .gc.sec.miui.com
 .gcapi.sy.kugou.com
+.gcdn.2mdn.net
 .gdfp.gifshow.com
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
@@ -2981,8 +2970,6 @@
 .gpm-mon-sg.byteoversea.com
 .gqjppj.rentcafe.com.cdn.cloudflare.net
 .grand.ele.me
-.graph-fallback.instagram.com
-.graph.instagram.com
 .gridsumdissector.com
 .growingio.com
 .grs.hicloud.com
@@ -2991,13 +2978,8 @@
 .gsp1.baidu.com
 .gtm.temu.com
 .gtm.wise.com
-.gtms01.alicdn.com
-.gtms02.alicdn.com
-.gtms03.alicdn.com
-.gtms04.alicdn.com
 .gtmsdd.alicdn.com
 .gtrk.s3.amazonaws.com
-.guanggaoad.youku.com
 .guanjia.baidu.com
 .guardianapps.co.uk
 .guess.h.qhimg.com
@@ -3023,7 +3005,6 @@
 .haiwai-ic.ksosoft.com
 .hao.360.cn
 .hao.uc.cn
-.hao123union.baidu.com
 .happy-davinci-53144f.netlify.com
 .hbid.ams3.cdn.digitaloceanspaces.com
 .hc.baidu.com
@@ -3076,10 +3057,12 @@
 .httpsdns.baidu.com
 .huatuo.qq.com
 .huaxiang.eastmoney.com
+.hudong.pl.youku.com
 .hugelog.fcbox.com
 .hui.sohu.com
 .huichuan.sm.cn
 .huodong.mi.com
+.huodong.pl.youku.com
 .huodong.vip.youku.com
 .husky.sogou.com
 .hwstats.unity3d.com
@@ -3094,7 +3077,6 @@
 .i.paypal.com
 .i.posthog.com
 .i.skimresources.com
-.i.snssdk.com
 .i.viafoura.co
 .i1.services.social.microsoft.com
 .i16-tb.isnssdk.com
@@ -3108,8 +3090,6 @@
 .iad-08.braze.com
 .iad.apple.com
 .iadcontent.apple.com
-.iadmat.nosdn.127.net
-.iadmatapk.nosdn.127.net
 .iadmatvideo.nosdn.127.net
 .iadmoo.apple.com
 .iadmusicmat.music.126.net
@@ -3164,7 +3144,6 @@
 .imagev2.tx.xmcdn.com
 .imapi-sg.isnssdk.com
 .imdns.hpplay.cn
-.img-bss.csdn.net
 .img-c.heytapimage.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
@@ -3216,8 +3195,6 @@
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
-.intl.wapa.taobao.com
-.intl.waptest.taobao.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
 .ip.taobao.com
@@ -3235,7 +3212,7 @@
 .iwanad.baidu.com
 .iyes.youku.com
 .j.br.baidu.com
-.ja2.gamersky.com
+.j.wit.qq.com
 .jac.yahoosandbox.com
 .janapi.jd.com
 .jdsbyb.webmd.com
@@ -3420,13 +3397,13 @@
 .luimg.baidu.com
 .lupic.cdn.bcebos.com
 .lvip.youku.com
-.lxbjs.baidu.com
 .lxcdn.dl.files.xiaomi.net
 .m-adash.m.taobao.com
-.m.intl.taobao.com
+.m.2mdn.net
 .m.qpic.cn
 .m.simba.taobao.com
 .m.yap.yahoo.com
+.m1.2mdn.net
 .m1.baidu.com
 .ma-adx.ctrip.com
 .ma.baidu.com
@@ -3448,7 +3425,6 @@
 .marketing.agora.io
 .marketing.alibaba.com
 .marketing.mangacopy.com
-.marketingplatform.google.com
 .marketingsolutions.yahoo.com
 .marketo.com
 .martech.condenastdigital.com
@@ -3500,7 +3476,6 @@
 .metrics.chase.com
 .metrics.cnn.com
 .metrics.doppiocdn.com
-.metrics.duolingo.com
 .metrics.elsevier.com
 .metrics.icloud.com
 .metrics.imdb.com
@@ -3713,7 +3688,6 @@
 .omtrdc.net
 .oneid.mmstat.com
 .onepush.query.yahoo.com
-.onesignal.com
 .onetag-sys.com
 .onethingpcs.com
 .online-forex-trading-systems.blogspot.com
@@ -3747,7 +3721,6 @@
 .os-mon.zijieapi.com
 .osfota.cdn.aliyun.com
 .osimg.nbcuni.com
-.osupdate.aliyun.com
 .otf.msn.com
 .oth.eve.qq.com
 .otpercpiheno.blogspot.com
@@ -3809,7 +3782,6 @@
 .pb3.pstatp.com
 .pbc.wsj.com
 .pbd.sogou.com
-.pbmp.ali213.net
 .pbxai.com
 .pc-mon.zijieapi.com
 .pc.uf.ksosoft.com
@@ -3868,7 +3840,6 @@
 .pixels.spotify.com
 .pixiu.shangshufang.ksosoft.com
 .pl.cp31.ott.cibntv.net
-.pl.youku.com
 .plaus.outpost.pub
 .play.kakao.com
 .player-metrics.instaread.co
@@ -4036,6 +4007,8 @@
 .rm.sina.com.cn
 .rmads.eu.msn.com
 .rmads.msn.com
+.rmcdn.2mdn.net
+.rmcdn.f.2mdn.net
 .rmgdapfnccsharpprd.azurewebsites.net
 .rmoeu.mercury.sogou.com
 .rmonitor.qq.com
@@ -4069,6 +4042,8 @@
 .s.lenovo.com
 .s.skimresources.com
 .s.so.360.cn
+.s0.2mdn.net
+.s1.2mdn.net
 .s3t3d2y8.afcdn.net
 .sa.api.intl.miui.com
 .sa.sina.cn
@@ -4145,7 +4120,6 @@
 .segment.io
 .sensorsdata.cn
 .sentinelbi.com
-.sentry.d.mi.com
 .sentry.d.xiaomi.net
 .sentry.music.163.com
 .server.iad.liveperson.net
@@ -4156,7 +4130,6 @@
 .sessions.bugsnag.com
 .sestat.baidu.com
 .setting.snswin.qq.com
-.sf3-ttcdn-tos.pstatp.com
 .sfp.safe.baidu.com
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
@@ -4297,6 +4270,7 @@
 .static-ads.akamaized.net
 .static-doubleclick-net.l.google.com
 .static-tracking.klaviyo.com
+.static.2mdn.net
 .static.addtoany.com
 .static.alimama.com
 .static.ku6.com
@@ -4307,7 +4281,6 @@
 .staticfile.net
 .staticfile.org
 .staticxx.facebook.com
-.statis.api.3g.youku.com
 .statis.mobile.youku.com
 .statis.push.netease.com
 .statistic.qzone.qq.com
@@ -4407,7 +4380,6 @@
 .techain.baidu.com
 .techhome-js.github.io
 .techprovider.intel.com
-.tejia.taobao.com
 .telegramweb.vercel.app
 .telemetrics.klaviyo.com
 .telemetry-coverage.mozilla.org
@@ -4449,7 +4421,6 @@
 .tj.kugou.com
 .tj.video.qq.com
 .tj.youzanyun.com
-.tjs.sjs.sinajs.cn
 .tk.baidu.com
 .tkweb.baidu.com
 .tma.snssdk.com
@@ -4641,10 +4612,6 @@
 .v.shopify.com
 .v16-ad.byteoversea.com
 .v2st.shinobi.jp
-.v6-adashx.ut.amap.com
-.v6-adashx.ut.cainiao.com
-.v6-adashx.ut.ele.me
-.v6-adashx.ut.taobao.com
 .v9banners-com.cdn.ampproject.org
 .val.api.youku.com
 .vcl-brain.snssdk.com
@@ -4746,7 +4713,6 @@
 .wip3.adobe.com
 .wisepops.com
 .wisepush.video.baidu.com
-.wit.qq.com
 .wiwqhootrf.com
 .wkclick.baidu.com
 .wkctj.baidu.com
@@ -4815,7 +4781,6 @@
 .ybp.yahoo.com
 .yc-ads.s3.amazonaws.com
 .ye.dun.163yun.com
-.yektanet.com
 .yengo.com
 .yieldmo-builds.s3.amazonaws.com
 .ykad-data.youku.com
@@ -4849,7 +4814,6 @@
 .zx.docin.com
 .zymo.mps.weibo.com
 .zz.bdstatic.com
-643108e7617ef.cdn.sohucs.com
 9ibbcq2d.sina.cn
 ac.dun.163yun.com
 acfeedbackws.icloud.com
@@ -4862,11 +4826,13 @@ ad.bn.netease.com
 ad.gamebox.360.cn
 ad.iot.360.cn
 adapi.shouji.360.cn
+adashx.ut.ele.me
 adavideo.baidu.com
 adlog.vivo.com.cn
 adproxy.autohome.com.cn
 ads.privacy.qq.com
 adsehera.ximalaya.com
+adsh.m.taobao.com
 adsh.wagbridge.1688.alimama.com
 adsh.wagbridge.alibaba.alimama.com
 adsh.wagbridge.tanx.alimama.com
@@ -4910,7 +4876,6 @@ bgp.fe01.c3.xiaomi.com
 bk01.hh.xiaomi.com
 bksoup.v.qq.com
 blog.xiaomi.com
-bloodhound.spotify.com
 bs.l.qq.com
 c.id.mi.com
 c.l.qq.com
@@ -4941,7 +4906,6 @@ dns.m.sm.cn
 dns.wechat.com
 download.wan.sohu.com
 du.163.com
-e8aeb8bbdbbd7.cdn.sohucs.com
 err.taobao.com
 events-analytics.apple.com
 f1.g.mi.com
@@ -4964,6 +4928,11 @@ gecko-lq.snssdk.com
 geo.hicloud.com
 geolocation.onetrust.com
 global.search.xiaomi.net
+gtms01.alicdn.com
+gtms02.alicdn.com
+gtms03.alicdn.com
+gtms04.alicdn.com
+guanggaoad.youku.com
 hc-ssp.sm.cn
 hd.xiaojukeji.com
 hd.xiaomi.com
@@ -4983,6 +4952,8 @@ huodong.xiaomi.com
 huosai.xiaomi.com
 i.xiaomi.com
 iad.g.163.com
+iadmat.nosdn.127.net
+iadmatapk.nosdn.127.net
 igame.xiaomi.com
 ilce.alicdn.com
 ime.api.xiaomi.com
@@ -5030,11 +5001,8 @@ mtt.str.mdt.qq.com
 news-l.play.ott.video.qq.com
 news.l.qq.com
 nlog.baidu.com
-o33249.ingest.sentry.io
-o4504926511693824.ingest.sentry.io
 omgmta.play.ott.video.qq.com
 onrt-stsdk.vivo.com.cn
-openaicom.imgix.net
 openjmacs.m.taobao.com
 openpanel.follow.is
 order.music.xiaomi.com
@@ -5046,11 +5014,11 @@ oth.update.mdt.qq.com
 p.l.qq.com
 p2.l.qq.com
 p2sdmkj6t.bkt.clouddn.com
-p3-ad-sign.byteimg.com
 pb.hd.sohu.com.cn
 pg-ad-b1.ws.126.net
 pg-ad-b2.ws.126.net
 phonecallapi.micloud.xiaomi.net
+pl.youku.com
 pmall.migc.xiaomi.com
 pnrt-stsdk.vivo.com.cn
 pre-ad.alimama.com
@@ -5071,6 +5039,7 @@ samsungeurope.eu.qualtrics.com
 saxs.sina.cn
 sdfp.snssdk.com
 secode2.hd.xiaomi.com
+sentry.d.mi.com
 sf0.market.xiaomi.com
 sfsapi.micloud.xiaomi.net
 shoes.app-xae.xiaomi.com
@@ -5081,6 +5050,7 @@ splashimgretrybssdl.cloud.kugou.com
 stat.dns.sb
 stat.loli.net
 static.mibi.xiaomi.com
+statis.api.3g.youku.com
 stats.xiaomi.com
 stnetsdk.appstore.vivo.com.cn
 stnetsdk.vivo.com.cn
