--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 17:30:36
-# Total rules: 5097
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 21:08:39
+# Total rules: 5215
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -673,6 +673,44 @@
 .bjmantis.net
 .bldr.mkt.samsung.com
 .blue.thehill.com
+.bn2wns1.wns.windows.com
+.bn3sch020010558.wns.windows.com
+.bn3sch020010560.wns.windows.com
+.bn3sch020010618.wns.windows.com
+.bn3sch020010629.wns.windows.com
+.bn3sch020010631.wns.windows.com
+.bn3sch020010635.wns.windows.com
+.bn3sch020010636.wns.windows.com
+.bn3sch020010650.wns.windows.com
+.bn3sch020011727.wns.windows.com
+.bn3sch020012850.wns.windows.com
+.bn3sch020020322.wns.windows.com
+.bn3sch020020749.wns.windows.com
+.bn3sch020022328.wns.windows.com
+.bn3sch020022335.wns.windows.com
+.bn3sch020022361.wns.windows.com
+.bn4sch101120814.wns.windows.com
+.bn4sch101120818.wns.windows.com
+.bn4sch101120911.wns.windows.com
+.bn4sch101120913.wns.windows.com
+.bn4sch101121019.wns.windows.com
+.bn4sch101121109.wns.windows.com
+.bn4sch101121118.wns.windows.com
+.bn4sch101121223.wns.windows.com
+.bn4sch101121407.wns.windows.com
+.bn4sch101121618.wns.windows.com
+.bn4sch101121704.wns.windows.com
+.bn4sch101121709.wns.windows.com
+.bn4sch101121714.wns.windows.com
+.bn4sch101121908.wns.windows.com
+.bn4sch101122117.wns.windows.com
+.bn4sch101122310.wns.windows.com
+.bn4sch101122312.wns.windows.com
+.bn4sch101122421.wns.windows.com
+.bn4sch101123108.wns.windows.com
+.bn4sch101123110.wns.windows.com
+.bn4sch101123202.wns.windows.com
+.bn4sch102110124.wns.windows.com
 .bobo.163.com
 .bobo.corp.163.com
 .bodis.com
@@ -762,6 +800,7 @@
 .c2shb.pubgw.yahoo.com
 .c2shb.ssp.yahoo.com
 .c7e935.netlify.com
+.cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
 .calopenupdate.comm.miui.com
@@ -3024,6 +3063,81 @@
 .hits.getelevar.com
 .hits.theguardian.com
 .hk.napi.ucweb.com
+.hk2.wns.windows.com
+.hk2sch130020721.wns.windows.com
+.hk2sch130020723.wns.windows.com
+.hk2sch130020726.wns.windows.com
+.hk2sch130020729.wns.windows.com
+.hk2sch130020732.wns.windows.com
+.hk2sch130020824.wns.windows.com
+.hk2sch130020843.wns.windows.com
+.hk2sch130020851.wns.windows.com
+.hk2sch130020854.wns.windows.com
+.hk2sch130020855.wns.windows.com
+.hk2sch130020924.wns.windows.com
+.hk2sch130020936.wns.windows.com
+.hk2sch130020940.wns.windows.com
+.hk2sch130020956.wns.windows.com
+.hk2sch130020958.wns.windows.com
+.hk2sch130020961.wns.windows.com
+.hk2sch130021017.wns.windows.com
+.hk2sch130021029.wns.windows.com
+.hk2sch130021035.wns.windows.com
+.hk2sch130021137.wns.windows.com
+.hk2sch130021142.wns.windows.com
+.hk2sch130021153.wns.windows.com
+.hk2sch130021217.wns.windows.com
+.hk2sch130021246.wns.windows.com
+.hk2sch130021249.wns.windows.com
+.hk2sch130021260.wns.windows.com
+.hk2sch130021264.wns.windows.com
+.hk2sch130021322.wns.windows.com
+.hk2sch130021323.wns.windows.com
+.hk2sch130021329.wns.windows.com
+.hk2sch130021334.wns.windows.com
+.hk2sch130021360.wns.windows.com
+.hk2sch130021432.wns.windows.com
+.hk2sch130021433.wns.windows.com
+.hk2sch130021435.wns.windows.com
+.hk2sch130021437.wns.windows.com
+.hk2sch130021440.wns.windows.com
+.hk2sch130021450.wns.windows.com
+.hk2sch130021518.wns.windows.com
+.hk2sch130021523.wns.windows.com
+.hk2sch130021526.wns.windows.com
+.hk2sch130021527.wns.windows.com
+.hk2sch130021544.wns.windows.com
+.hk2sch130021554.wns.windows.com
+.hk2sch130021618.wns.windows.com
+.hk2sch130021634.wns.windows.com
+.hk2sch130021638.wns.windows.com
+.hk2sch130021646.wns.windows.com
+.hk2sch130021652.wns.windows.com
+.hk2sch130021654.wns.windows.com
+.hk2sch130021657.wns.windows.com
+.hk2sch130021723.wns.windows.com
+.hk2sch130021726.wns.windows.com
+.hk2sch130021727.wns.windows.com
+.hk2sch130021730.wns.windows.com
+.hk2sch130021731.wns.windows.com
+.hk2sch130021754.wns.windows.com
+.hk2sch130021829.wns.windows.com
+.hk2sch130021830.wns.windows.com
+.hk2sch130021833.wns.windows.com
+.hk2sch130021840.wns.windows.com
+.hk2sch130021842.wns.windows.com
+.hk2sch130021851.wns.windows.com
+.hk2sch130021852.wns.windows.com
+.hk2sch130021927.wns.windows.com
+.hk2sch130021928.wns.windows.com
+.hk2sch130021929.wns.windows.com
+.hk2sch130021958.wns.windows.com
+.hk2sch130022035.wns.windows.com
+.hk2sch130022041.wns.windows.com
+.hk2sch130022049.wns.windows.com
+.hk2sch130022135.wns.windows.com
+.hk2wns1.wns.windows.com
+.hk2wns1b.wns.windows.com
 .hktracker.hankookilbo.com
 .hl2rcv.adobe.com
 .hlrcv.stage.adobe.com
@@ -3769,6 +3883,7 @@
 .pangolin.snssdk.com
 .pangolin16.isnssdk.com
 .papi.look.360.cn
+.par02p.wns.windows.com
 .pardot.com
 .parking.godaddy.com
 .parkingcrew.net
@@ -4133,6 +4248,7 @@
 .sfp.safe.baidu.com
 .sfsafsadfjbbj-dsafjnb-1321533417.cos.ap-beijing.myqcloud.com
 .sg.a.stat.mi.com
+.sg2p.wns.windows.com
 .sgali-mcs.byteoversea.com
 .sh.apigw.tencentcs.com
 .shadu.baidu.com
@@ -4399,6 +4515,7 @@
 .teredo.ipv6.microsoft.com
 .test-landing-page-122122.email-disney.cjm.adobe.com
 .test-luckydraw.csdn.net
+.test.activity.windows.com
 .test.ott.youku.com
 .textlink.simba.taobao.com
 .tf.360.cn
@@ -4916,6 +5033,7 @@ f8.market.xiaomi.com
 fe02.lg.xiaomi.com
 fe05.lg.xiaomi.com
 feedback.search.microsoft.com
+feedback.windows.com
 feedbackws.icloud.com
 font.sec.miui.com
 free-aos-cdn-image.amap.com
