--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-17 21:08:39
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-18 09:41:25
 # Total rules: 5215
 
 .0a0d-d3l1vr.b-cdn.net
@@ -663,6 +663,7 @@
 .biddingx.com
 .bidswitch.net
 .bigdata.ssp.samsung.com
+.bilivideo.cn
 .binance.us
 .bingads.microsoft.com
 .binocule21c.merriam-webster.com
@@ -3553,7 +3554,6 @@
 .mazu.m.qq.com
 .mazu.sec.miui.com
 .mc.yandex.ru
-.mcdn.bilivideo.cn
 .mcdn.bilivideo.com
 .mcgi.v.qq.com
 .mclick.simba.taobao.com
@@ -3961,6 +3961,7 @@
 .player-telemetry.vimeo.com
 .player.cnevids.com
 .plbusiness.samsung.com
+.pls.prd.mz.internal.unity3d.com
 .pluto.sogou.com
 .pmir.3g.qq.com
 .pms.mb.qq.com
@@ -5035,7 +5036,6 @@ fe05.lg.xiaomi.com
 feedback.search.microsoft.com
 feedback.windows.com
 feedbackws.icloud.com
-font.sec.miui.com
 free-aos-cdn-image.amap.com
 frontier-aweme-hl.snssdk.com
 fyb-2.cdn.bcebos.com
