--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-18 09:41:25
-# Total rules: 5215
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-19 11:04:24
+# Total rules: 5216
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -35,6 +35,7 @@
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
+.55bcf1aa.b-cdn.net
 .578297a5.b-cdn.net
 .66hao.cc
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
@@ -891,7 +892,6 @@
 .clouderrorreporting.googleapis.com
 .cloudflareinsights.com
 .cloudfront-labs.amazonaws.com
-.cloudlogobox.com
 .cltgtstor001.blob.core.windows.net
 .cm.baidu.com
 .cm.bilibili.com
@@ -1579,6 +1579,7 @@
 .d2bxxk33t58v29.cloudfront.net
 .d2byenqwec055q.cloudfront.net
 .d2byrpuyl3x3q4.cloudfront.net
+.d2c2pscv8ayc0e.cloudfront.net
 .d2c4ylitp1qu24.cloudfront.net
 .d2c8v52ll5s99u.cloudfront.net
 .d2camyomzxmxme.cloudfront.net
@@ -2117,6 +2118,7 @@
 .d3pe8wzpurrzss.cloudfront.net
 .d3pel2vlstnlu9.cloudfront.net
 .d3phzb7fk3uhin.cloudfront.net
+.d3pk1qkob3uzgp.cloudfront.net
 .d3pkntwtp2ukl5.cloudfront.net
 .d3plfjw9uod7ab.cloudfront.net
 .d3pnod4lg28ix4.cloudfront.net
@@ -4111,7 +4113,6 @@
 .retcode.taobao.com
 .review.gdtimg.com
 .rh.qq.com
-.rhaphaecelts.com
 .rich.qq.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
