--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-19 14:33:17
-# Total rules: 5216
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-19 21:44:56
+# Total rules: 5159
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -33,12 +33,10 @@
 .3p-geo.yahoo.com
 .3p-udc.yahoo.com
 .3rd.t.sohu.com
-.3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
 .55bcf1aa.b-cdn.net
 .578297a5.b-cdn.net
 .66hao.cc
-.7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7xi9g1.com1.z0.glb.clouddn.com
 .7xsf3h.com1.z0.glb.clouddn.com
@@ -48,7 +46,6 @@
 .91116e9f.b-cdn.net
 .91fbab6d.b-cdn.net
 .9b583af3.b-cdn.net
-.9w2zed1szg.execute-api.us-east-1.amazonaws.com
 .Media.net
 .a-adx.ctrip.com
 .a-dxk.play.api.3g.youku.com
@@ -106,6 +103,7 @@
 .ad.360.cn
 .ad.api.3g.youku.com
 .ad.api.mobile.youku.com
+.ad.bench.utorrent.com
 .ad.browser.qq.com
 .ad.csdn.net
 .ad.dev.360.cn
@@ -148,7 +146,6 @@
 .ad4point.nyc3.digitaloceanspaces.com
 .ad5.sina.com.cn
 .ada.baidu.com
-.adagiobanner.s3.amazonaws.com
 .adalyser.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -203,7 +200,6 @@
 .adm.leju.sina.com.cn
 .adm.shinobi.jp
 .admarket.21cn.com
-.admarvel.s3.amazonaws.com
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
 .adnet.qq.com
@@ -216,7 +212,6 @@
 .adpai.thepaper.cn
 .adping.qq.com
 .adpm.app.qq.com
-.adpublisher.s3.amazonaws.com
 .adrdir.qq.com
 .adreq.vivo.com.cn
 .ads-api.tiktok.com
@@ -240,6 +235,7 @@
 .ads.95516.com
 .ads.auctions.yahoo.com
 .ads.bing.com
+.ads.bittorrent.com
 .ads.bloomberg.com
 .ads.bssdl.kugou.com
 .ads.csdn.net
@@ -296,7 +292,6 @@
 .adsebs.ximalaya.com
 .adsence.sogou.com
 .adsense.html5.qq.com
-.adserver-2084671375.us-east-1.elb.amazonaws.com
 .adserver.bing.com
 .adserver.yahoo.com
 .adservice.google.co.jp
@@ -338,8 +333,6 @@
 .adsview.qq.com
 .adsview2.qq.com
 .adsyndication.msn.com
-.adtago.s3.amazonaws.com
-.adtechvideo.s3.amazonaws.com
 .adthrive.com
 .adtng.com
 .adtrack.quark.cn
@@ -361,16 +354,13 @@
 .advertising.microsoft.com
 .advertising.yahoo.com
 .advertising.yandex.ru
-.advice-ads.s3.amazonaws.com
 .advst.cp33.ott.cibntv.net
 .adwbs.ximalaya.com
 .adx-dre.op.hicloud.com
 .adx-open-service.youku.com
 .adx-static.ksosoft.com
 .adx.tanx.com
-.adx1js.s3.amazonaws.com
 .adxlog-adnet.vivo.com.cn
-.adzerk.s3.amazonaws.com
 .ae.bdstatic.com
 .aecpm.alicdn.com
 .aedns.weixin.qq.com
@@ -405,8 +395,6 @@
 .al.autohome.com.cn
 .aladdinupdate.blackrock.com
 .alb.reddit.com
-.alexa-mobile-analytics-configuration-prod.s3.amazonaws.com
-.alexa-sitestats.s3.amazonaws.com
 .alimama.alicdn.com
 .alime-pic.oss-cn-hangzhou.aliyuncs.com
 .alindflepkaty14.pages.dev
@@ -418,19 +406,18 @@
 .als-svc.nytimes.com
 .amazon-adsystem.amazon.com
 .amazon-adsystem.com
+.amazonaws.com
 .amc.yandex.ru
 .amdc.alipay.com
 .amdcopen.m.taobao.com
 .amfi.gou.sogou.com
 .amplitude.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
-.ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
 .an.yandex.ru
 .analy.qq.com
 .analytics-alv.google.com
 .analytics-api.smzdm.com
-.analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
 .analytics.126.net
 .analytics.163.com
@@ -460,7 +447,6 @@
 .analytics.pgncs.notion.so
 .analytics.pointdrive.linkedin.com
 .analytics.query.yahoo.com
-.analytics.s3.amazonaws.com
 .analytics.snssdk.com
 .analytics.spankbang.com
 .analytics.spotify.com
@@ -479,7 +465,6 @@
 .analytics2-3-meride-tv.akamaized.net
 .analytics2-meride-tv.akamaized.net
 .analyticsehnwe.servicebus.windows.net
-.analyticsengine.s3.amazonaws.com
 .analyticshipaa.cloud.coveo.com
 .anapp.adobe.com
 .android-lrcresource.wps.cn
@@ -614,7 +599,6 @@
 .b442172e.b-cdn.net
 .b5a2e40a.b-cdn.net
 .b5f000a8.b-cdn.net
-.babes-mansion.s3.amazonaws.com
 .badding.oss-ap-southeast-1.aliyuncs.com
 .badjs.weixinbridge.com
 .baichuan-sdk.alicdn.com
@@ -630,7 +614,6 @@
 .bam-x.com
 .banlv.baidu.com
 .banner.alimama.com
-.bannersweb.s3.amazonaws.com
 .bar.baidu.com
 .bat.bing.com
 .bats.video.yahoo.com
@@ -806,7 +789,6 @@
 .caclick.baidu.com
 .cad.youku.com
 .calopenupdate.comm.miui.com
-.campaign-uploads.s3.amazonaws.com
 .campaign.adobe.com
 .cams.xvideos.com
 .cane.intel.com
@@ -824,7 +806,6 @@
 .ccc-x.jd.com
 .ccc.sys.intl.xiaomi.com
 .ccclub.cmbchina.com
-.cdj-dap.s3-ap-northeast-1.amazonaws.com
 .cdn-ads.oss-cn-shanghai.aliyuncs.com
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn-ketchapp.akamaized.net
@@ -891,7 +872,6 @@
 .clmbtech.com
 .clouderrorreporting.googleapis.com
 .cloudflareinsights.com
-.cloudfront-labs.amazonaws.com
 .cltgtstor001.blob.core.windows.net
 .cm.baidu.com
 .cm.bilibili.com
@@ -1856,7 +1836,6 @@
 .d3.sinaimg.cn
 .d300jm499woj5o.cloudfront.net
 .d301cxwfymy227.cloudfront.net
-.d303e3cdddb4ded4b6ff495a7b496ed5.s3.amazonaws.com
 .d30sxnvlkawtwa.cloudfront.net
 .d30tme16wdjle5.cloudfront.net
 .d30ts2zph80iw7.cloudfront.net
@@ -2413,7 +2392,6 @@
 .device-provisioning.googleapis.com
 .device.io.mi.com
 .devicemessaging.us-east-1.amazon.com
-.devisprox-media.s3-website-eu-west-1.amazonaws.com
 .dew9ckzjyt2gn.cloudfront.net
 .df.tanx.com
 .df0pmigc8xs70.cloudfront.net
@@ -2453,7 +2431,6 @@
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dic9vgwbkxd8r.cloudfront.net
 .dig.bdurl.net
-.digital-ads.s3.amazonaws.com
 .dihutyaiafuhr.cloudfront.net
 .dil4q0t0blrf8.cloudfront.net
 .dilvyi2h98h1q.cloudfront.net
@@ -2662,7 +2639,6 @@
 .dualstack-a.apilocate.amap.com
 .dualstack-cgicol.amap.com
 .dualstack-logs.amap.com
-.dualstack.adsame-1421766300.ap-southeast-1.elb.amazonaws.com
 .duclick.baidu.com
 .due5a6x777z0x.cloudfront.net
 .dufai4b1ap33z.cloudfront.net
@@ -2748,13 +2724,11 @@
 .eaus2watcab01.blob.core.windows.net
 .eaus2watcab02.blob.core.windows.net
 .ebxcdn.com
-.ec2-44-233-143-239.us-west-2.compute.amazonaws.com
 .eclick.baidu.com
 .ecma.bdimg.com
 .ecmb.bdimg.com
 .ecmc.bdimg.com
 .eco.taobao.com
-.ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .ecsv2.roblox.com
 .edge.adobedc.net
@@ -2780,7 +2754,6 @@
 .emdcadvise.eastmoney.com
 .ems.youku.com
 .enchantestore.myshopify.com
-.entrecard.s3.amazonaws.com
 .entry.baidu.com
 .ephemeralcounters.api.roblox.com
 .epro.sogou.com
@@ -2806,7 +2779,6 @@
 .event.csdn.net
 .event.ksosoft.com
 .event.zhihu.com
-.eventcollectorv2-1131000179.us-east-1.elb.amazonaws.com
 .eventgateway.soundcloud.com
 .eventlogger.soundcloud.com
 .eventrecorder.cm.bloomberg.com
@@ -2878,13 +2850,11 @@
 .firebaselogging.googleapis.com
 .first-hufu.oss-cn-shanghai.aliyuncs.com
 .firstpartycookie.istockphoto.com
-.fkrkkmxsqeb5bj9r.s3.amazonaws.com
 .flash.sec.intl.miui.com
 .flash.sec.miui.com
 .flashplayerfeedback.adobe.com
 .flashstats.libsyn.com
 .flex.msn.com
-.flipdish-cookie-consent.s3-eu-west-1.amazonaws.com
 .flurry.com
 .fm.qzone.qq.com
 .fodder.qq.com
@@ -2944,7 +2914,6 @@
 .gcapi.sy.kugou.com
 .gcdn.2mdn.net
 .gdfp.gifshow.com
-.gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
 .geek-nerd-server.firebaseapp.com
@@ -3004,7 +2973,6 @@
 .googlesyndication.com
 .googletagmanager.com
 .googletagservices.com
-.goshare-fleet-ads.s3.ap-southeast-1.amazonaws.com
 .goto.sogou.com
 .gou.wps.cn
 .goutong.baidu.com
@@ -3021,7 +2989,6 @@
 .gtm.temu.com
 .gtm.wise.com
 .gtmsdd.alicdn.com
-.gtrk.s3.amazonaws.com
 .guanjia.baidu.com
 .guardianapps.co.uk
 .guess.h.qhimg.com
@@ -3293,6 +3260,7 @@
 .informer.yandex.ru
 .ingress.linktr.ee
 .inmobi.com
+.inside.bitcomet.com
 .insight.ucweb.com
 .insights.algolia.io
 .insights.alibaba.com
@@ -3359,7 +3327,6 @@
 .juggler.services.disqus.com
 .jun01.oss-cn-beijing.aliyuncs.com
 .jzt.jd.com
-.k8s-adserver-adserver-4b35ec6a1d-815734624.us-east-1.elb.amazonaws.com
 .kaan.kakao.com
 .kape.dataplane.rudderstack.com
 .karanpcofficial.blogspot.com
@@ -3371,7 +3338,6 @@
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
 .kiks.yandex.ru
-.kinesis.eu-west-1.amazonaws.com
 .kjdsfjisdfjr23.azurewebsites.net
 .kjdvn1340-ads.blogspot.com
 .klipmart.forbes.com
@@ -3505,7 +3471,6 @@
 .lptag.liveperson.net
 .lptest.email-mobiledx.cjm.adobe.com
 .lstat.youku.com
-.ltassrv.com.s3.amazonaws.com
 .ltsbsy.qq.com
 .ltsydzd.qq.com
 .lu.sogou.com
@@ -3531,7 +3496,6 @@
 .magsrv.com
 .mail-ads.google.com
 .mail-cytanet.pages.dev
-.mailmunch.s3.amazonaws.com
 .maliva-mcs.byteoversea.com
 .mall.csdn.net
 .mapi.m.jd.com
@@ -3547,7 +3511,6 @@
 .martech.condenastdigital.com
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
-.master-shopify-tracker.s3.amazonaws.com
 .match.p4p.1688.com
 .matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
@@ -3634,7 +3597,6 @@
 .mixer.sina.cn
 .mixpanel-proxy.ted.com
 .mixpanel.com
-.mj-snowplow-static-js.s3.amazonaws.com
 .mjca-yijws.global.ssl.fastly.net
 .mktg.act-on.com
 .ml314.com
@@ -3658,7 +3620,6 @@
 .mobile.ximalaya.com
 .mobileads.google.com
 .mobileads.msn.com
-.mobileanalytics.us-east-1.amazonaws.com
 .mobilefuse.com
 .mobileleads.msn.com
 .mobilelog.kugou.com
@@ -3712,7 +3673,6 @@
 .mtrcs.redhat.com
 .mujib-store28.blogspot.com
 .mvads.kugou.com
-.mvchallenges.s3-website-eu-west-1.amazonaws.com
 .mvideo.xiaomi.com
 .mxpl.9gag.com
 .mxpnl.com
@@ -3725,7 +3685,6 @@
 .na2m-pr.licenses.adobe.com
 .nadjibsoft.blogspot.com
 .nadvideo2.baidu.com
-.nativead.s3.amazonaws.com
 .nbc-jite.nbcuni.com
 .nbcollect.kugou.com
 .nbcollectretry.kugou.com
@@ -3745,13 +3704,11 @@
 .newton-api.ele.me
 .nex.163.com
 .nex.corp.163.com
-.nextdaymedia-ads.s3.amazonaws.com
 .nexus.officeapps.live.com
 .nexusrules.officeapps.live.com
 .nexxtv-events.servicebus.windows.net
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
-.nitrous-analytics.s3.amazonaws.com
 .nmetrics.samsung.com
 .nmtracking.netflix.com
 .no9pldds1lmn3.soundcloud.com
@@ -3763,7 +3720,6 @@
 .notify.wps.cn
 .notify6.com
 .notifysrv.com
-.nouvelobs.s3-website-eu-west-1.amazonaws.com
 .novelsns.html5.qq.com
 .ns.adobe.com
 .ns.weibo.cn
@@ -3775,7 +3731,6 @@
 .o.lenovo.com
 .o.webmd.com
 .o2o.api.xiaomi.com
-.o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .objective-wright-961fed.netlify.com
 .oca.microsoft.com
 .oceanengine.com
@@ -3869,7 +3824,6 @@
 .p6-ad-sign.byteimg.com
 .p9-ad-sign.byteimg.com
 .package.box.xiaomi.com
-.pacontainer.s3.amazonaws.com
 .page.amap.com
 .pagead-googlehosted.l.google.com
 .pagead-tpc.l.google.com
@@ -3987,7 +3941,6 @@
 .privacyfriendly.netlify.app
 .prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
-.projectagora.s3.amazonaws.com
 .promote.biz.weibo.cn
 .promoted.soundcloud.com
 .propsid.b-cdn.net
@@ -3998,7 +3951,6 @@
 .psfq.gou.sogou.com
 .psh-static.b-cdn.net
 .puata.info
-.pub-algeriatenders.s3.eu-central-1.amazonaws.com
 .pub.network
 .pubgw.api.ddxq.mobi
 .public.gdtimg.com
@@ -4130,6 +4082,7 @@
 .rmoeu.mercury.sogou.com
 .rmonitor.qq.com
 .romeccs.microsoft.com
+.router.bittorrent.com
 .routertips.video.qq.com
 .rp.baidu.com
 .rp.hpplay.cn
@@ -4230,7 +4183,6 @@
 .securemvt.apple.com
 .security-lq.snssdk.com
 .sedoparking.com
-.seedapp-creative.s3.amazonaws.com
 .seek.intel.com
 .segment-cdn.producthunt.com
 .segment.com
@@ -4336,7 +4288,6 @@
 .spike.email-disney.cjm.adobe.com
 .splashimgbssdl.yun.kugou.com
 .splashqqlive.gtimg.com
-.sprocket-ping.s3.amazonaws.com
 .sprofile-lp1.cdn.nintendo.net
 .spynet2.microsoft.com
 .spynetalt.microsoft.com
@@ -4511,7 +4462,6 @@
 .temai.snssdk.com
 .temai.taobao.com
 .tempest.services.disqus.com
-.tempo-client-metric-prod.s3.amazonaws.com
 .tenmaxsgads.blob.core.windows.net
 .tepshared.tep.test.ajo.adobe.com
 .teredo.ipv6.microsoft.com
@@ -4612,7 +4562,6 @@
 .tracking.lenovo.com
 .tracking.lg.com
 .tracking.miui.com
-.tracking.opencandy.com.s3.amazonaws.com
 .tracking.prd.mz.internal.unity3d.com
 .tracking.rus.miui.com
 .tracking.smartbusiness.samsung.com
@@ -4621,7 +4570,6 @@
 .trading.assistant.miui.com
 .traffic.bokecc.com
 .traffic.spot.im
-.trafficfuelpixel.s3-us-west-2.amazonaws.com
 .traffichaus.com
 .trafficjunky.com
 .trafficjunky.net
@@ -4677,7 +4625,6 @@
 .ulog.imap.baidu.com
 .ulogjs.gifshow.com
 .ultimate-tech-products.myshopify.com
-.um-public-panel-prod.s3.amazonaws.com
 .um.hd.sohu.com
 .umdc.aliapp.org
 .umeng.com
@@ -4888,7 +4835,6 @@
 .xlog.tiktokv.com
 .xmaterial.tu.qq.com
 .xmpush.xiaomi.com
-.xp2023-pix.s3.amazonaws.com
 .xpj08.oss-cn-beijing.aliyuncs.com
 .xpjcg.oss-accelerate.aliyuncs.com
 .xsolid.baidu.com
@@ -4896,12 +4842,9 @@
 .xxxviijmp.com
 .xycdn.com
 .xz-development.oss-cn-beijing.aliyuncs.com
-.yab-adimages.s3.amazonaws.com
 .ybp.yahoo.com
-.yc-ads.s3.amazonaws.com
 .ye.dun.163yun.com
 .yengo.com
-.yieldmo-builds.s3.amazonaws.com
 .ykad-data.youku.com
 .ykad-gateway.youku.com
 .ykatr.youku.com
