--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-19 23:06:33
-# Total rules: 3441
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-19 23:30:04
+# Total rules: 3447
 
 .0a0d-d3l1vr.b-cdn.net
 .0a58b45e.b-cdn.net
@@ -638,6 +638,7 @@
 .bdtt.b-cdn.net
 .beacon-api.aliyuncs.com
 .beacon.cdn.qq.com
+.beacon.dropbox.com
 .beacon.gtimg.com
 .beacon.gu-web.net
 .beacon.guim.co.uk
@@ -940,6 +941,7 @@
 .config.uca.cloud.unity3d.com
 .connatix.com
 .connect.intel.com
+.consent.dropbox.com
 .consent.economist.com
 .contentrecommend-out.mobile.sina.cn
 .contributions.guardianapis.com
@@ -1123,6 +1125,7 @@
 .df3a81b4.b-cdn.net
 .dfapvmql-q.global.ssl.fastly.net
 .dhfs.heytapimage.com
+.dhlsupplychain.dhl.com
 .diagnostics.support.microsoft.com
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dig.bdurl.net
@@ -2043,6 +2046,7 @@
 .marketing.act-on.com
 .marketing.agora.io
 .marketing.alibaba.com
+.marketing.dropbox.com
 .marketing.mangacopy.com
 .marketingsolutions.yahoo.com
 .marketo.com
@@ -2344,6 +2348,7 @@
 .outlookads.live.com
 .outreach.crossref.org
 .p-log.ykimg.com
+.p-n.io
 .p.alimama.com
 .p.controld.com
 .p.hentaiforce.net
@@ -2992,6 +2997,7 @@
 .telemetry-coverage.mozilla.org
 .telemetry.adobe.io
 .telemetry.algolia.com
+.telemetry.dropbox.com
 .telemetry.microsoft.com
 .telemetry.mozilla.org
 .telemetry.soundcloud.com
