--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,8 +1,7 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-20 16:14:03
-# Total rules: 4998
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-21 09:46:08
+# Total rules: 4971
 
 .0a0d-d3l1vr.b-cdn.net
-.0a58b45e.b-cdn.net
 .0lovespells0.blogspot.com
 .1.wps.cn
 .1010pic.com
@@ -10,18 +9,13 @@
 .123.sogoucdn.com
 .12551-1311572332.cos.ap-shanghai.myqcloud.com
 .13js1lbtbj3.sparkloop.app
-.1f506eaf.b-cdn.net
 .1oavsblobprodcus350.blob.core.windows.net
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
-.27051a00.b-cdn.net
 .2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
-.30032c91.b-cdn.net
-.31def833.b-cdn.net
 .33across.com
-.3426e3de.b-cdn.net
 .37bvsblobprodcus311.blob.core.windows.net
 .3dns-1.adobe.com
 .3dns-2.adobe.com
@@ -34,19 +28,12 @@
 .3rd.t.sohu.com
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
-.55bcf1aa.b-cdn.net
-.578297a5.b-cdn.net
 .66hao.cc
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7xi9g1.com1.z0.glb.clouddn.com
 .7xsf3h.com1.z0.glb.clouddn.com
-.87104801.b-cdn.net
-.87fa4b7e.b-cdn.net
 .888.tv.sohu.com
-.91116e9f.b-cdn.net
-.91fbab6d.b-cdn.net
-.9b583af3.b-cdn.net
 .9w2zed1szg.execute-api.us-east-1.amazonaws.com
 .Coordinator-Production-28516768.us-east-1.elb.amazonaws.com
 .Media.net
@@ -71,7 +58,6 @@
 .aamt.nbcnews.com
 .aan.amazon.com
 .ab-machine.forbes.com
-.abf53a6f.b-cdn.net
 .ablink.ae.linktr.ee
 .ablink.ma.linktr.ee
 .abody.39.net
@@ -165,7 +151,6 @@
 .adbehavior.wsa.ximalaya.com
 .adbehavior.ximalaya.com
 .adblock.sina.cn
-.adblockers.b-cdn.net
 .adboss.qzone.qq.com
 .adbox.sina.com.cn
 .adbs.ximalaya.com
@@ -608,9 +593,6 @@
 .b.bdstatic.com
 .b.smartvideo.youku.com
 .b2binsider.adobe.com
-.b442172e.b-cdn.net
-.b5a2e40a.b-cdn.net
-.b5f000a8.b-cdn.net
 .babes-mansion.s3.amazonaws.com
 .badding.oss-ap-southeast-1.aliyuncs.com
 .badjs.weixinbridge.com
@@ -813,7 +795,6 @@
 .carrick-ui.advoncommerce.com
 .casalemedia.com
 .catalog.video.msn.com
-.catandmousegame.b-cdn.net
 .cb.baidu.com
 .cbjs.baidu.com
 .cbjslog.baidu.com
@@ -2394,7 +2375,6 @@
 .defppmasu35cw.cloudfront.net
 .deisd5o6v8rgq.cloudfront.net
 .dek5iqd53g59a.cloudfront.net
-.delicioustaco.b-cdn.net
 .demdex.net
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
@@ -2416,7 +2396,6 @@
 .df.huya.com
 .df.tanx.com
 .df0pmigc8xs70.cloudfront.net
-.df3a81b4.b-cdn.net
 .df80k0z3fi8zg.cloudfront.net
 .dfapvmql-q.global.ssl.fastly.net
 .dfck9uqiatqhh.cloudfront.net
@@ -2743,7 +2722,6 @@
 .e.stat.ykimg.com
 .e045f561.b-cdn.net
 .e1.o.lencr.org
-.eatthiskok.b-cdn.net
 .eaus2watcab01.blob.core.windows.net
 .eaus2watcab02.blob.core.windows.net
 .ebxcdn.com
@@ -2839,7 +2817,6 @@
 .f10.baidu.com
 .f11.baidu.com
 .f12.baidu.com
-.f3eb2b32.b-cdn.net
 .fa.163.com
 .fa.corp.163.com
 .facai383.oss-cn-guangzhou.aliyuncs.com
@@ -2864,7 +2841,6 @@
 .feed-image.baidu.com
 .feed.baidu.com
 .feedback-c.zijieapi.com
-.fef258ef.b-cdn.net
 .fengkongcloud.com
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
@@ -3152,7 +3128,6 @@
 .hmma.baidu.com
 .holahupa.com
 .hoplink.ksosoft.com
-.hornylitics.b-cdn.net
 .hot.browser.miui.com
 .hotapi-va.isnssdk.com
 .hotupgrade.hpplay.cn
@@ -3364,7 +3339,6 @@
 .kape.dataplane.rudderstack.com
 .karanpcofficial.blogspot.com
 .kde.qq.com
-.keepblockingthislol.b-cdn.net
 .kepler.jd.com
 .kgipadstat.kugou.com
 .kgipadstatbak.kugou.com
@@ -3960,7 +3934,6 @@
 .pemsrv.com
 .perf-events.cloud.unity3d.com
 .perf.hsforms.com
-.performance-check.b-cdn.net
 .permutive.app
 .peter-north-cum-shot.blogspot.com
 .pfp.sina.com.cn
@@ -4156,6 +4129,7 @@
 .retcode.taobao.com
 .review.gdtimg.com
 .rh.qq.com
+.rhaphaecelts.com
 .rich.qq.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
@@ -4782,7 +4756,6 @@
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
 .vebo-vast.pages.dev
-.verify-human.b-cdn.net
 .vhotwsh.video.qq.com
 .viagra-pill.blogspot.com
 .video-ad.sm.cn
