--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-21 09:46:08
-# Total rules: 4971
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-21 15:30:15
+# Total rules: 4973
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -419,6 +419,7 @@
 .analytics.adobe.io
 .analytics.algolia.com
 .analytics.archive.org
+.analytics.aweber.com
 .analytics.bigdata.samsung.com
 .analytics.bloomberg.com
 .analytics.brave.com
@@ -3838,6 +3839,7 @@
 .openjmacs4uc.m.taobao.com
 .openmonitor.alipay-eco.com
 .openmonitor.alipay.com
+.openrate.aweber.com
 .openrcv.baidu.com
 .openx.net
 .ophan.theguardian.com
