--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-21 15:30:15
-# Total rules: 4973
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-21 22:39:52
+# Total rules: 4977
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -231,6 +231,7 @@
 .ads.heytapmobi.com
 .ads.imgur.com
 .ads.linkedin.com
+.ads.mozilla.org
 .ads.msn.com
 .ads.music.126.net
 .ads.newgrounds.com
@@ -2440,6 +2441,7 @@
 .dir.minigame.qq.com
 .direct-events-collector.spot.im
 .disableadblock.com
+.discord.com
 .discuz.gtimg.cn
 .dispatcher.upmc.uc.cn
 .distillery.wistia.com
@@ -3620,6 +3622,7 @@
 .metrics.npr.org
 .metrics.redhat.com
 .metrics.roblox.com
+.metrics.sciencedirect.com
 .metrics.sky.com
 .metrics.ted.com
 .metrics.theatlantic.com
@@ -3803,6 +3806,7 @@
 .ogads-pa.googleapis.com
 .oimg.login.cnbc.com
 .oimg.m.calltheclose.cnbc.com
+.oimg.mobile.cnbc.com
 .oimg.nbcuni.com
 .oimsgad.qq.com
 .om.barrons.com
