--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-21 22:39:52
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-22 09:27:37
 # Total rules: 4977
 
 .0a0d-d3l1vr.b-cdn.net
@@ -2441,7 +2441,6 @@
 .dir.minigame.qq.com
 .direct-events-collector.spot.im
 .disableadblock.com
-.discord.com
 .discuz.gtimg.cn
 .dispatcher.upmc.uc.cn
 .distillery.wistia.com
@@ -2759,6 +2758,7 @@
 .emdcadvertise.eastmoney.com
 .emdcadvise.eastmoney.com
 .ems.youku.com
+.enc-90128738.b-cdn.net
 .enchantestore.myshopify.com
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
