--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-23 09:32:53
-# Total rules: 4977
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-23 11:14:41
+# Total rules: 4981
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -2755,6 +2755,7 @@
 .elqtrkstg.intel.com
 .em.baidu.com
 .email.social.qualtrics.com
+.embeds.beehiiv.com
 .emdcadvertise.eastmoney.com
 .emdcadvise.eastmoney.com
 .ems.youku.com
@@ -3700,6 +3701,7 @@
 .monitor-frontend-collector.a.bybit-aws.com
 .monitor.music.qq.com
 .monitor.qq.com
+.mononoteapp.firebaseio.com
 .monorail-edge.shopifysvc.com
 .mostat.wps.cn
 .mountain.zhidao.baidu.com
@@ -4041,6 +4043,7 @@
 .pv.hd.sohu.com
 .pv.sogou.com
 .pv.sohu.com
+.pv.zhiding.cn
 .pvdata.ku6.com
 .pvstat.html5.qq.com
 .px-intl.ucweb.com
@@ -4450,6 +4453,7 @@
 .stdl.qq.com
 .stingcool-com.myshopify.com
 .stockbook-ads.firebaseapp.com
+.stockbook-ads.firebaseio.com
 .stocks-analytics-events.apple.com
 .stopstomach.com
 .store.tv.api.3g.youku.com
