--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-23 11:14:41
-# Total rules: 4981
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-24 09:50:13
+# Total rules: 4985
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -29,6 +29,7 @@
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .51.la
 .66hao.cc
+.682a5845.b-cdn.net
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .7q1z79gxsi.global.ssl.fastly.net
 .7xi9g1.com1.z0.glb.clouddn.com
@@ -377,6 +378,7 @@
 .ai.m.taobao.com
 .ai.taobao.com
 .aic-ngfts.lge.com
+.aidsvc.netflix.com
 .ainu.intel.com
 .airlytics.airlock.twcmobile.weather.com
 .aixuntupian.oss-cn-hongkong.aliyuncs.com
@@ -1166,6 +1168,7 @@
 .d1cykymlllue3h.cloudfront.net
 .d1czd1q73kbu32.cloudfront.net
 .d1d7hwtv2l91pm.cloudfront.net
+.d1dcnte8mfzkpv.cloudfront.net
 .d1dh1gvx7p0imm.cloudfront.net
 .d1diqetif5itzx.cloudfront.net
 .d1djrodi2reo2w.cloudfront.net
@@ -3741,6 +3744,7 @@
 .mybbc-analytics.files.bbci.co.uk
 .myes.youku.com
 .myhandshops.myshopify.com
+.mythdev.b-cdn.net
 .n.3g.163.com
 .na1r.services.adobe.com
 .na2m-pr.licenses.adobe.com
