--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-24 09:50:13
-# Total rules: 4985
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-25 09:35:14
+# Total rules: 4997
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -147,6 +147,7 @@
 .adashx.ut.uc.cn
 .adashx.ut.youku.com
 .adashx4ae.ut.taobao.com
+.adashx4id.ut.taobao.com
 .adashx4yt.m.taobao.com
 .adashxgc.ut.taobao.com
 .adbehavior.wsa.ximalaya.com
@@ -328,6 +329,7 @@
 .adtechvideo.s3.amazonaws.com
 .adthrive.com
 .adtng.com
+.adtrack-intl.ucweb.com
 .adtrack.quark.cn
 .adtrack.uc.cn
 .adtrack.ucweb.com
@@ -723,6 +725,7 @@
 .btloader.com
 .btrace.qq.com
 .btrace.video.qq.com
+.bts-la.ucweb.com
 .bugly.qq.com
 .bugreportv2.qq.com
 .bullionglidingscuttle.com
@@ -2727,6 +2730,7 @@
 .e.stat.ykimg.com
 .e045f561.b-cdn.net
 .e1.o.lencr.org
+.easytomessage.com
 .eaus2watcab01.blob.core.windows.net
 .eaus2watcab02.blob.core.windows.net
 .ebxcdn.com
@@ -2998,6 +3002,7 @@
 .gpm-mon-sg.byteoversea.com
 .gqjppj.rentcafe.com.cdn.cloudflare.net
 .grand.ele.me
+.graph.facebook.com
 .gridsumdissector.com
 .growingio.com
 .grs.hicloud.com
@@ -3294,6 +3299,7 @@
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
+.intlsucus.ucweb.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
 .ip.taobao.com
@@ -3737,6 +3743,7 @@
 .mtrace.qq.com
 .mtrcs.redhat.com
 .mujib-store28.blogspot.com
+.mum.alibabachengdun.com
 .mvads.kugou.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
 .mxpl.9gag.com
@@ -4164,6 +4171,7 @@
 .rp.baidu.com
 .rp.hpplay.cn
 .rplog.baidu.com
+.rps.hpplay.cn
 .rqd.qq.com
 .rs.sinajs.cn
 .rs1.qq.com
@@ -4194,6 +4202,7 @@
 .sa.api.intl.miui.com
 .sa.bbc.co.uk
 .sa.sina.cn
+.saas.hpplay.cn
 .safebrowsing.urlsec.qq.com
 .sail-horizon.com
 .sam.msn.com
@@ -4765,6 +4774,7 @@
 .v2st.shinobi.jp
 .v9banners-com.cdn.ampproject.org
 .val.api.youku.com
+.vali-ugc.cp31.ott.cibntv.net
 .vcl-brain.snssdk.com
 .vcs.zijieapi.com
 .vd.contents.prod.eu.s3.amazonaws.com
@@ -4778,6 +4788,7 @@
 .video-dsp.pddpic.com
 .video-stats.video.google.com
 .video.dispatch.tc.qq.com
+.video.market.xiaomi.com
 .video.ureport.push.qq.com
 .video231.oss-cn-beijing.aliyuncs.com
 .videoplayerhub.com
@@ -4788,6 +4799,7 @@
 .vilaghelyzete.blogspot.com
 .vip.granicus.com
 .vipauth.hpplay.cn
+.vipgslb.hpplay.cn
 .virusinfo-cloudscan-cn.heytapmobi.com
 .visit.webhosting.yahoo.com
 .visualscience.external.bbc.co.uk
