--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-25 09:35:14
-# Total rules: 4997
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-25 16:51:51
+# Total rules: 4998
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -3463,6 +3463,7 @@
 .loggw.alipaydns.com
 .logs.amap.com
 .logs.appsource.microsoft.com
+.logs.blip.net
 .logs.datadoghq.com
 .logs.netflix.com
 .logsdk.qq.com
