--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-25 16:51:51
-# Total rules: 4998
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-26 10:06:26
+# Total rules: 5000
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -2523,6 +2523,7 @@
 .dmtracking.alibaba.com
 .dmtracking2.alibaba.com
 .dmtw0i4zln92b.cloudfront.net
+.dmxhgf4zuwdvu.cloudfront.net
 .dmz3nd5oywtsw.cloudfront.net
 .dn34cbtcv9mef.cloudfront.net
 .dn3uy6cx65ujf.cloudfront.net
@@ -4298,6 +4299,7 @@
 .share.baidu.com
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
+.shopeevn-affiliate.blogspot.com
 .shouji.360.cn
 .shouji.sogou.com
 .show-msgch.qq.com
