--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-26 10:06:26
-# Total rules: 5000
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-27 10:41:47
+# Total rules: 5002
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -1505,6 +1505,7 @@
 .d24fnxkxwarvg8.cloudfront.net
 .d24g87zbxr4yiz.cloudfront.net
 .d24iusj27nm1rd.cloudfront.net
+.d24luoisenoi7j.cloudfront.net
 .d24lwiav9pbaw7.cloudfront.net
 .d24qbn28utpewb.cloudfront.net
 .d24rtvkqjwgutp.cloudfront.net
@@ -1553,6 +1554,7 @@
 .d29lduyskr59p4.cloudfront.net
 .d29mhxfd390ueb.cloudfront.net
 .d29mxewlidfjg1.cloudfront.net
+.d2a0tn74luqqde.cloudfront.net
 .d2a4qm4se0se0m.cloudfront.net
 .d2a80scaiwzqau.cloudfront.net
 .d2a945og79nayl.cloudfront.net
