--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-28 09:41:22
-# Total rules: 5002
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-28 23:27:16
+# Total rules: 5007
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -821,6 +821,7 @@
 .cdn.avantisvideo.com
 .cdn.decibelinsight.net
 .cdn.onesignal.com
+.cdn.petbarn.test.ajo.adobe.com
 .cdn.puata.info
 .cdn.tanx.com
 .cdn.ynuf.aliapp.org
@@ -909,6 +910,7 @@
 .collect.rebelmouse.io
 .collector-cdn.github.com
 .collector-dev.cdp-dev.cnn.com
+.collector-pxebumdlwe.px-cloud.net
 .collector.bsg.brave.com
 .collector.cdp.cnn.com
 .collector.dcdn.baidu.com
@@ -2316,6 +2318,7 @@
 .data.mistat.rus.xiaomi.com
 .data.mob.com
 .data.news.paypal.com
+.data.petbarn.test.ajo.adobe.com
 .data.premierleague.test.ajo.adobe.com
 .data.rahu.test.ajo.adobe.com
 .data.rtcdpsummitlab.test.ajo.adobe.com
@@ -2614,6 +2617,7 @@
 .drpf-edt.proxima.nie.netease.com
 .drrcckbju3nd0.cloudfront.net
 .drulilqe8wg66.cloudfront.net
+.drupalmetrics.ppg.apple.com
 .drvdb9rcebidk.cloudfront.net
 .ds02gfqy6io6i.cloudfront.net
 .ds88pc0kw6cvc.cloudfront.net
@@ -3958,6 +3962,7 @@
 .perf-events.cloud.unity3d.com
 .perf.hsforms.com
 .permutive.app
+.petametrics.com
 .peter-north-cum-shot.blogspot.com
 .pfp.sina.com.cn
 .pftk.temu.com
