--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-04-29 09:40:34
-# Total rules: 5004
+# Generated from relevant_rules_wildcard_aware.txt on 2025-04-29 22:51:28
+# Total rules: 5006
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -3049,6 +3049,7 @@
 .hao.uc.cn
 .happy-davinci-53144f.netlify.com
 .hbid.ams3.cdn.digitaloceanspaces.com
+.hc-ssp.sm.cn
 .hc.baidu.com
 .hdtu.oss-cn-beijing.aliyuncs.com
 .heads-fa.spotify.com
@@ -3655,6 +3656,7 @@
 .migc.g.mi.com
 .migcreport.g.mi.com
 .migrate.driveapi.micloud.xiaomi.net
+.mihoutao1868.github.io
 .milink.pandora.xiaomi.com
 .mime.baidu.com
 .mimg.126.net
