--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-01 09:27:57
-# Total rules: 5006
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-02 11:52:46
+# Total rules: 5007
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -421,6 +421,7 @@
 .analytics.163.com
 .analytics.21cn.com
 .analytics.adjust.net.in
+.analytics.adjust.world
 .analytics.adobe.io
 .analytics.algolia.com
 .analytics.archive.org
