--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,4 +1,4 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-02 11:52:46
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-02 22:31:58
 # Total rules: 5007
 
 .0a0d-d3l1vr.b-cdn.net
@@ -183,6 +183,7 @@
 .adinplay-venatus.workers.dev
 .adj.st
 .adjust.com
+.adjust.world
 .adkwai.com
 .adm.baidu.com
 .adm.leju.sina.com.cn
@@ -421,7 +422,6 @@
 .analytics.163.com
 .analytics.21cn.com
 .analytics.adjust.net.in
-.analytics.adjust.world
 .analytics.adobe.io
 .analytics.algolia.com
 .analytics.archive.org
@@ -525,7 +525,6 @@
 .app-measurement.com
 .app-monitor.ele.me
 .app.adjust.net.in
-.app.adjust.world
 .app.bugsnag.com
 .app.chat.xiaomi.net
 .app.info.redhat.com
@@ -4426,6 +4425,7 @@
 .stat.tiara.kakao.com
 .stat.tpns.gz2.tencent.com
 .stat.tpns.tencent.com
+.stat.u.sb
 .stat.v.baidu.com
 .stat.ws.126.net
 .stat.y.qq.com
