--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-02 22:31:58
-# Total rules: 5007
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 10:21:52
+# Total rules: 5011
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -96,6 +96,7 @@
 .ad.api.mobile.youku.com
 .ad.bench.utorrent.com
 .ad.browser.qq.com
+.ad.caiyunapp.com
 .ad.csdn.net
 .ad.dev.360.cn
 .ad.docer.wps.cn
@@ -2216,6 +2217,7 @@
 .d6cto2pyf2ks.cloudfront.net
 .d6deij4k3ikap.cloudfront.net
 .d6l5p6w9iib9r.cloudfront.net
+.d6rak4b14t5gp.cloudfront.net
 .d6sav80kktzcx.cloudfront.net
 .d6swopgiplmy0.cloudfront.net
 .d6wzv57amlrv3.cloudfront.net
@@ -2759,6 +2761,7 @@
 .ef.tanx.com
 .effulgent-stroopwafel-efb9ce.netlify.app
 .eiv.baidu.com
+.eizzih.com
 .eldoradottfha.dataplane.rudderstack.com
 .eloqua-tracking.unity3d.com
 .eloqua-trackings.unity3d.com
@@ -4156,6 +4159,7 @@
 .resolver.msg.global.xiaomi.net
 .retcode.taobao.com
 .review.gdtimg.com
+.rg-3tn.pages.dev
 .rh.qq.com
 .rhaphaecelts.com
 .rich.qq.com
