--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 10:21:52
-# Total rules: 5011
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 13:09:58
+# Total rules: 5012
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -3847,6 +3847,7 @@
 .omt.shinobi.jp
 .omtrdc.net
 .oneid.mmstat.com
+.onemob.mobi
 .onepush.query.yahoo.com
 .onetag-sys.com
 .onethingpcs.com
