--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 13:09:58
-# Total rules: 5012
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 14:10:55
+# Total rules: 5029
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -124,6 +124,7 @@
 .ad.ximalaya.com
 .ad.youku.com
 .ad.zijieapi.com
+.ad.zui.com
 .ad1.baike.com
 .ad1.sina.com.cn
 .ad1.xiaomi.com
@@ -193,6 +194,7 @@
 .admarvel.s3.amazonaws.com
 .admost-banner.b-cdn.net
 .admusicpic.music.126.net
+.adncdnend.azureedge.net
 .adnet.sohu.com
 .adnxs.com
 .adobe-dns-2.adobe.com
@@ -343,6 +345,7 @@
 .adv.webmd.com
 .advbanners.global.ssl.fastly.net
 .adver.qq.com
+.advertiseonbing.azureedge.net
 .advertising-api-eu.amazon.com
 .advertising-api-fe.amazon.com
 .advertising-api.amazon.com
@@ -417,6 +420,8 @@
 .analy.qq.com
 .analytics-alv.google.com
 .analytics-api.smzdm.com
+.analytics-consent-manager-v2-prod.azureedge.net
+.analytics-consent-manager.azureedge.net
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
 .analytics.126.net
@@ -937,9 +942,11 @@
 .config.uca.cloud.unity3d.com
 .connatix.com
 .connect.intel.com
+.connext-cdn.azureedge.net
 .consent.dropbox.com
 .consent.economist.com
 .contentrecommend-out.mobile.sina.cn
+.contoso-my.sharepoint.com
 .contributions.guardianapis.com
 .cookielawblog.wordpress.com
 .cookiex.ngd.yahoo.com
@@ -2895,6 +2902,7 @@
 .forms.lenovo.com
 .fourier.alibaba.com
 .fourier.taobao.com
+.fp-cdn.azureedge.net
 .fp.measure.office.com
 .fpa-api.arstechnica.com
 .fpa-cdn.arstechnica.com
@@ -2926,6 +2934,7 @@
 .g.tbcdn.cn
 .g1.163.com
 .g1.corp.163.com
+.g2insights-cdn.azureedge.net
 .ga1.3dmgame.com
 .gad.kugou.com
 .galaxy.sogoucdn.com
@@ -3410,6 +3419,7 @@
 .lms.roblox.com
 .lmsjy.qq.com
 .lnk0.com
+.loader-cdn.azureedge.net
 .location.ximalaya.com
 .locdrop.query.yahoo.com
 .log-api-mn.huxiu.com
@@ -3734,6 +3744,7 @@
 .mqqadr.reader.qq.com
 .mqtt.zhihu.com
 .ms.yandex.ru
+.msadsscale.azureedge.net
 .msedge.net
 .msg.mobile.kugou.com
 .msg.youku.com
@@ -4153,6 +4164,7 @@
 .report.uc.heytapmobi.com
 .report.vip.qq.com
 .reports.sdiapi.com
+.request.verisign.com
 .res.imtt.qq.com
 .res.mi.baidu.com
 .res.mmstat.com
@@ -4257,6 +4269,7 @@
 .sdkconfig.video.qq.com
 .sdkinit.taobao.com
 .sdn.kugou.com
+.sdtagging.azureedge.net
 .sea.napi.ucweb.com
 .seal.digicert.com
 .seal.globalsign.com
@@ -4353,6 +4366,7 @@
 .smetrics.samsung.com.cn
 .smetrics.science.org
 .smetrics.sky.com
+.smetrics.verisign.com
 .smetrics.washingtonpost.com
 .smetrics2.nokia.com
 .sms.email-disney.cjm.adobe.com
@@ -4678,6 +4692,7 @@
 .trafficjunky.com
 .trafficjunky.net
 .trail.53kf.com
+.trap.skype.com
 .treatment.grammarly.com
 .trends.mobile.sina.cn
 .treverschmelerkris18.myshopify.com
@@ -4822,6 +4837,7 @@
 .vntsm.com
 .vodus-api-serverless.azurewebsites.net
 .vodus-api.azurewebsites.net
+.voduscdn.azureedge.net
 .voiceads.cn
 .volceapplog.com
 .vortex-sandbox.data.microsoft.com
@@ -4891,6 +4907,7 @@
 .whatif.it.adobe.com
 .whatif.nl.adobe.com
 .whatif.uk.adobe.com
+.wheelioapp.azureedge.net
 .widget.weibo.com
 .win10.ipv6.microsoft.com
 .win1710.ipv6.microsoft.com
