--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 14:10:55
-# Total rules: 5029
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 14:30:15
+# Total rules: 5031
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -206,6 +206,7 @@
 .adpublisher.s3.amazonaws.com
 .adrdir.qq.com
 .adreq.vivo.com.cn
+.ads-api.ft.com
 .ads-api.tiktok.com
 .ads-api.twitter.com
 .ads-api.x.com
@@ -4402,6 +4403,7 @@
 .spike.email-disney.cjm.adobe.com
 .splashimgbssdl.yun.kugou.com
 .splashqqlive.gtimg.com
+.spoor-api.ft.com
 .sprocket-ping.s3.amazonaws.com
 .sprofile-lp1.cdn.nintendo.net
 .spynet2.microsoft.com
