--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-03 14:30:15
-# Total rules: 5031
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-04 09:34:26
+# Total rules: 5032
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -4014,6 +4014,7 @@
 .pixels.spotify.com
 .pixiu.shangshufang.ksosoft.com
 .pl.cp31.ott.cibntv.net
+.pl.elements.video
 .plaus.outpost.pub
 .play.kakao.com
 .player-metrics.instaread.co
