--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-04 09:34:26
-# Total rules: 5032
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-04 17:17:56
+# Total rules: 5046
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -113,6 +113,7 @@
 .ad.player.baidu.com
 .ad.qn.img-space.com
 .ad.qq.com
+.ad.queryly.com
 .ad.qun.qq.com
 .ad.sina.com.cn
 .ad.sohu.com
@@ -424,6 +425,7 @@
 .analytics-consent-manager-v2-prod.azureedge.net
 .analytics-consent-manager.azureedge.net
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
+.analytics-sdk.yle.fi
 .analytics-sg.tiktok.com
 .analytics.126.net
 .analytics.163.com
@@ -713,6 +715,9 @@
 .boscdn.bpc.baidu.com
 .boxai-structured-data-slice-formal-1258344701.cos.ap-guangzhou.myqcloud.com
 .bradcroninnapo82.myshopify.com
+.branch-areena.yle.fi
+.branch-uutisvahti.yle.fi
+.branch-ylefi.yle.fi
 .branch.io
 .brand.sogou.com
 .brandmetrics.com
@@ -857,6 +862,7 @@
 .citycash2.blogspot.com
 .cjhq.baidu.com
 .cjroq.bealge.sogou.com
+.clanker-events.squarespace.com
 .clarity.ms
 .clarium.global.ssl.fastly.net
 .classify-client.services.mozilla.com
@@ -2330,6 +2336,7 @@
 .data.news.paypal.com
 .data.petbarn.test.ajo.adobe.com
 .data.premierleague.test.ajo.adobe.com
+.data.queryly.com
 .data.rahu.test.ajo.adobe.com
 .data.rtcdpsummitlab.test.ajo.adobe.com
 .data.sbux.test.ajo.adobe.com
@@ -2349,6 +2356,7 @@
 .dataflow.biliapi.com
 .datax.baidu.com
 .date2night.b-cdn.net
+.dax.yle.fi
 .dax3x3wqpt2q3.cloudfront.net
 .day13vh1xl0gh.cloudfront.net
 .dazu57wmpm14b.cloudfront.net
@@ -2401,6 +2409,7 @@
 .demdex.net
 .demkc32bq01ah.cloudfront.net
 .demo.emaillpb.adobe.com
+.depart.trinitymedia.ai
 .derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
@@ -2828,6 +2837,7 @@
 .events.mz.unity3d.com
 .events.reddit.com
 .events.release.narrativ.com
+.events.squarespace.com
 .eventsproxy.gargantuan.futureplc.com
 .everestop.io
 .evs.icy-lake.kickstarter.com
@@ -3260,6 +3270,7 @@
 .images.frbusiness.samsung.com
 .images.info.alibabacloud.com
 .images.it.business.samsung.com
+.images.kampanjat.yle.fi
 .images.newsletter.larksuite.com
 .images.partnersupport.samsung.com
 .images.pinduoduo.com
@@ -3639,6 +3650,7 @@
 .metrics-ieeexplore.ieee.org
 .metrics-logger.spot.im
 .metrics.accuweather.com
+.metrics.api.yle.fi
 .metrics.apple.com
 .metrics.blackrock.com
 .metrics.bloomberg.com
@@ -3648,6 +3660,7 @@
 .metrics.data.hicloud.com
 .metrics.doppiocdn.com
 .metrics.elsevier.com
+.metrics.fortune.com
 .metrics.icloud.com
 .metrics.imdb.com
 .metrics.mzstatic.com
@@ -4655,6 +4668,7 @@
 .track.lc.quark.cn
 .track.mailerlite.com
 .track.miui.com
+.track.msg.fortune.com
 .track.sohu.com
 .track.tiara.kakao.com
 .track.uc.cn
