--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-04 17:17:56
-# Total rules: 5046
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-05 10:21:51
+# Total rules: 5047
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -2803,6 +2803,7 @@
 .eqads.com
 .erebor.douban.com
 .ereg.adobe.com
+.error-analytics-sessions-production.shopifysvc.com
 .error-collector.ted.com
 .error-tracking.reddit.com
 .ers.baidu.com
