--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-05 10:21:51
-# Total rules: 5047
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-06 09:34:35
+# Total rules: 5050
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -2303,6 +2303,7 @@
 .data.aem-showcase-internal.adobe.com
 .data.aem-sites-internal.adobe.com
 .data.aepcomms.cjm.adobe.com
+.data.americanexpress.test.ajo.adobe.com
 .data.b2bmail.adobe.com
 .data.bilibili.com
 .data.cip.test.ajo.adobe.com
@@ -2326,6 +2327,7 @@
 .data.employeecommunications.adobe.com
 .data.gm.test.ajo.adobe.com
 .data.haoma.sogou.com
+.data.ingspain.test.ajo.adobe.com
 .data.mail.contentauthenticity.adobe.com
 .data.mayo.test.ajo.adobe.com
 .data.minute.ly
@@ -4387,6 +4389,7 @@
 .smetrics2.nokia.com
 .sms.email-disney.cjm.adobe.com
 .sms.email-mobiledx.cjm.adobe.com
+.sms.petbarn.test.ajo.adobe.com
 .sms.rtcdpsummitlab.test.ajo.adobe.com
 .sms.ultimate-success-emea.test.ajo.adobe.com
 .smtrcs.redhat.com
