--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-06 09:34:35
-# Total rules: 5050
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-06 13:43:27
+# Total rules: 5074
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -387,6 +387,7 @@
 .ai.m.taobao.com
 .ai.taobao.com
 .aic-ngfts.lge.com
+.aider-res.meizu.com
 .aidsvc.netflix.com
 .ainu.intel.com
 .airlytics.airlock.twcmobile.weather.com
@@ -499,6 +500,9 @@
 .api-ad-adapter.wps.com
 .api-ad-product.huxiu.com
 .api-adservices.apple.com
+.api-flow.meizu.com
+.api-game.meizu.com
+.api-push.meizu.com
 .api-visitor-analytics.intercom.com
 .api.amplitudeexperiment.com
 .api.apps.sina.cn
@@ -654,6 +658,7 @@
 .beap-bc.yahoo.com
 .behavior.tongdun.net
 .bes-mtj.baidu.com
+.bestpush.pconline.com.cn
 .beyondwickedmapping.org
 .bgg.baidu.com
 .bhwkju.vivo.com
@@ -804,6 +809,7 @@
 .cache.datamart.windows.com
 .caclick.baidu.com
 .cad.youku.com
+.cal.meizu.com
 .calopenupdate.comm.miui.com
 .campaign-uploads.s3.amazonaws.com
 .campaign.adobe.com
@@ -966,6 +972,7 @@
 .count.mail.163.com
 .count.video.sina.com.cn
 .count.vrs.sohu.com
+.count5.pconline.com.cn
 .counter.csdn.net
 .counter.ksosoft.com
 .counter.people.cn
@@ -2761,6 +2768,8 @@
 .easytomessage.com
 .eaus2watcab01.blob.core.windows.net
 .eaus2watcab02.blob.core.windows.net
+.ebook.meizu.com
+.ebook.res.meizu.com
 .ebxcdn.com
 .ec2-44-233-143-239.us-west-2.compute.amazonaws.com
 .eclick.baidu.com
@@ -2953,9 +2962,11 @@
 .gad.kugou.com
 .galaxy.sogoucdn.com
 .gallery.pandora.xiaomi.com
+.game-res.meizu.com
 .game-video.cdn.bcebos.com
 .game.html5.qq.com
 .game.kugou.com
+.game.res.meizu.com
 .game.weibo.cn
 .game.weibo.com
 .gamebox.360.cn
@@ -3312,6 +3323,7 @@
 .info.assets.reuters.com
 .info.sec.miui.com
 .info.wps.cn
+.infocenter.meizu.com
 .informer.yandex.ru
 .ingress.linktr.ee
 .inmobi.com
@@ -3344,6 +3356,7 @@
 .isdspeed.qq.com
 .isolatedovercomepasted.com
 .itsdata.map.baidu.com
+.ivy.pconline.com.cn
 .iwallet-1258175138.file.myqcloud.com
 .iwan-s.video.qq.com
 .iwan.sogou.com
@@ -3827,6 +3840,7 @@
 .no9pldds1lmn3.soundcloud.com
 .noa.yahoo.com
 .nol.yahoo.com
+.norma-external-collect.meizu.com
 .notes-analytics-events.apple.com
 .notice.game.xiaomi.com
 .notify-user-adjustments.vercel.app
@@ -3889,6 +3903,7 @@
 .open.kuaishouzt.com
 .open.kwaizt.com
 .open.snssdk.com
+.openapi-news.meizu.com
 .openapi.guanjia.qq.com
 .openapi.samsung.com
 .openbox.mobilem.360.cn
@@ -4086,6 +4101,7 @@
 .push.m.youku.com
 .push.mobile.kugou.com
 .push.music.baidu.com
+.push.res.meizu.com
 .push.tv.sohu.com
 .push.wps.cn
 .push.yuedu.163.com
@@ -4157,6 +4173,8 @@
 .reachmax.cn
 .read.medium.com
 .reader.browser.miui.com
+.reader.meizu.com
+.reader.res.meizu.com
 .realtime-receive-lp1.dg.srv.nintendo.net
 .receive-lp1.dg.srv.nintendo.net
 .receive-lp1.er.srv.nintendo.net
@@ -4650,7 +4668,10 @@
 .tns.simba.taobao.com
 .toggle.qq.com
 .token.safebrowsing.apple
+.tongji-res.meizu.com
+.tongji-res1.meizu.com
 .tongji.baidu.com
+.tongji.meizu.com
 .tongji.techweb.com.cn
 .tongjiniao.com
 .toolbar.baidu.com
@@ -4776,6 +4797,7 @@
 .umengacs.m.taobao.com
 .umengcloud.com
 .umengjmacs.m.taobao.com
+.umid.orion.meizu.com
 .umini.shujupie.com
 .umsns.com
 .un-acs.youku.com
@@ -4800,6 +4822,7 @@
 .update.mobile.kugou.com
 .updatecenter.qq.com
 .uplog.inews.qq.com
+.upush.res.meizu.com
 .uranus.jd.com
 .uranus.sogou.com
 .uranus.sohu.com
@@ -4819,6 +4842,7 @@
 .utp.ucweb.com
 .uu.qq.com
 .uvgxhu.ezgif.com
+.uxip.meizu.com
 .uz-analysis.akamaized.net
 .v.shopify.com
 .v16-ad.byteoversea.com
